// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportInstanceListTest render comment 1`] = `
<DocumentFragment>
  <div>
    <table
      class="instance-details"
    >
      <tbody>
        <tr
          class="instance-pair-details"
        >
          <th
            class="instance-key"
          >
            Comment
          </th>
          <td
            class="instance-value"
          >
            comment
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`ReportInstanceListTest render object prop value instance 1`] = `
<DocumentFragment>
  <div>
    <table
      class="instance-details"
    >
      <tbody>
        <tr
          class="instance-pair-details"
        >
          <th
            class="instance-subsection-header"
            colspan="2"
          >
            key1:
          </th>
        </tr>
        <tr
          class="instance-pair-details"
        >
          <th
            class="instance-key-indented"
          >
            key1&gt;1
          </th>
          <td
            class="instance-value"
          >
            value1&gt;1
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`ReportInstanceListTest render simple rows first - property bag rows second 1`] = `
<DocumentFragment>
  <div>
    <table
      class="instance-details"
    >
      <tbody>
        <tr
          class="instance-pair-details"
        >
          <th
            class="instance-subsection-header"
            colspan="2"
          >
            Complex Key One:
          </th>
        </tr>
        <tr
          class="instance-pair-details"
        >
          <th
            class="instance-key-indented"
          >
            key1-1
          </th>
          <td
            class="instance-value"
          >
            value1-1
          </td>
        </tr>
        <tr
          class="instance-pair-details"
        >
          <th
            class="instance-key-indented"
          >
            key1-2
          </th>
          <td
            class="instance-value"
          >
            value1-2
          </td>
        </tr>
        <tr
          class="instance-pair-details"
        >
          <th
            class="instance-key"
          >
            Simple Key One
          </th>
          <td
            class="instance-value"
          >
            value1
          </td>
        </tr>
        <tr
          class="instance-pair-details"
        >
          <th
            class="instance-subsection-header"
            colspan="2"
          >
            Complex Key Two:
          </th>
        </tr>
        <tr
          class="instance-pair-details"
        >
          <th
            class="instance-key-indented"
          >
            key2-1
          </th>
          <td
            class="instance-value"
          >
            value2-1
          </td>
        </tr>
        <tr
          class="instance-pair-details"
        >
          <th
            class="instance-key-indented"
          >
            key2-2
          </th>
          <td
            class="instance-value"
          >
            value2-2
          </td>
        </tr>
        <tr
          class="instance-pair-details"
        >
          <th
            class="instance-key"
          >
            Simple Key Two
          </th>
          <td
            class="instance-value"
          >
            value2
          </td>
        </tr>
        <tr
          class="instance-pair-details"
        >
          <th
            class="instance-subsection-header"
            colspan="2"
          >
            Sub Instance Value is null:
          </th>
        </tr>
        <tr
          class="instance-pair-details"
        >
          <th
            class="instance-key-indented"
          >
            key2-1
          </th>
          <td
            class="instance-value"
          >
            -
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`ReportInstanceListTest render snippet and path 1`] = `
<DocumentFragment>
  <div>
    <table
      class="instance-details"
    >
      <tbody>
        <tr
          class="instance-pair-details"
        >
          <th
            class="instance-key"
          >
            Path
          </th>
          <td
            class="instance-value"
          >
            target1
          </td>
        </tr>
        <tr
          class="instance-pair-details"
        >
          <th
            class="instance-key"
          >
            Snippet
          </th>
          <td
            class="instance-value"
          >
            someHtml
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
